# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  spec.yaml
.cargo/: config.toml
.github/workflows/: audit-general.yaml  audit-on-push.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
